--- a/Project/design.css
+++ b/Project/design.css
@@ -135,15 +135,32 @@ table {
 }
 
 table th, table td {
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 0px;
   text-align: left;
   border-bottom: 1.25px solid #000000;
   border-right: 1.25px solid #000000;
 }
 
+/* Specific styles for the favorite icon td */
+table td img.fav-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  cursor: pointer;
+}
+
+table td.fav-icon {
+  width: 50px; /* Adjust this to match the size of the favorite icon */
+  height: 50px;
+  padding: 0;
+  text-align: center;
+}
+
 table th {
   background-color: #2C3E50;
   color: white;
+  padding: 10px;
 }
 
 table tr:hover {
