--- a/Project/design.css
+++ b/Project/design.css
@@ -278,6 +278,29 @@ button:hover {
 .form-group button:hover {
   background-color: #7a9dff;
 }
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  flex-grow: 1;
+  padding-right: 30px; /* Ensure enough padding to avoid icon overlap */
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+}
+
+.toggle-password img {
+  width: 20px;
+  height: 20px;
+}
+
+
 
 a {
   text-decoration: none;
