--- a/Project/design.css
+++ b/Project/design.css
@@ -20,6 +20,45 @@ body {
   color: white;
   height: 150px;
 }
+.institution-details {
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.institution-details h1,
+.institution-details h2,
+.institution-details h3 {
+  margin-top: 0;
+}
+
+.institution-details h1 {
+  font-size: 2.5em;
+}
+
+.institution-details h2 {
+  font-size: 2em;
+  margin-top: 20px;
+}
+
+.institution-details .program,
+.institution-details .campus {
+  margin-bottom: 20px;
+}
+
+.institution-details .program h3,
+.institution-details .campus h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.institution-details p {
+  font-size: 1.1em;
+  line-height: 1.6;
+}
 
 .logo-container {
   height: 100%;
@@ -63,6 +102,7 @@ nav {
   background-color: rgba(217, 217, 217, 0.20);
   padding: 10px;
 }
+
 
 .nav-list {
   list-style-type: none;
