--- a/Project/design.css
+++ b/Project/design.css
@@ -465,6 +465,40 @@ a {
 .edit-profile-card .form-group button:hover {
   background-color: #7a9dff;
 }
+.institution-details {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.institution-details h1, .institution-details h2, .institution-details h3 {
+  color: #2C3E50; /* Dark blue for headers */
+}
+
+
+.program, .campus {
+  background-color: #f1f1ff; /* Light blue background for a subtle look */
+  border: 1px solid #ddd; /* Maintaining a subtle border */
+  padding: 15px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  border-radius: 5px;
+  
+}
+
+
+.program h3, .campus h3 {
+  margin-bottom: 10px;
+}
+
+.program p, .campus p {
+  line-height: 1.6;
+  text-align: left; /* Aligns text to the left */
+}
+
 
 /* Footer styling */
 .footer {
